--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: hello-world
 on:
   push:
     tags:
-      - '*'
+      - '(Stg|Prd)\.v{1}[0-9]{6}'
 jobs:
   my-job:
     runs-on: ubuntu-latest
