--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: hello-world
 on:
   push:
     tags:
-      - 'Stg.v[0-9]+'
+      - 'Stg.V[0-9]+.[0-9]+'
       - 'Prd.v[0-9]+'
 jobs:
   my-job:
